--- a/componets2.html
+++ b/componets2.html
@@ -28,7 +28,7 @@
                     <a href="#" style="padding: 5px;"><img src="twitter.png"></a>
                 </div>
                 <div style="text-align: right; padding: 10px 0 0 0;">
-                    <button  class="btn btn-primary">Sobre</button>
+                    <button  class="btn btn-primary">Sobre.</button>
                     <button  class="btn btn-primary">Suporte</button>
                     <button  class="btn btn-primary">Carrinho</button>
                 </div>
